--- a/Bike_sharing_Linear_Regression_Assignment[Shailender singh jayapal].ipynb
+++ b/Bike_sharing_Linear_Regression_Assignment[Shailender singh jayapal].ipynb
@@ -599,6 +599,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Perform EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
